# AkiraConsole-Firmware

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
.github/workflows/: release.yml
boards/: akiraconsole_esp32s3_procpu.conf  akiraconsole_esp32s3_procpu.overlay
boards/akiraconsole/: akiraconsole_esp32s3_procpu.dts  akiraconsole_partitions_16M.dtsi  board.cmake
signing/keys/: README.txt
src/: Kconfig  console_board.c
